# buildalot

./: README.md  example_cli.sh  example_config.yaml  pyproject.toml
buildalot/: README.md  pyproject.toml
buildalot/src/buildalot/: buildah.py  cli.py  cohesive_output.py  config.py  oci.py  work.py
buildalot/tests/: bind_test.py  cohesive_output_test.py  config_parsing_test.py
buildalot_integration_tests/: README.md  run_tests.bash  test_helpers.bash
buildalot_integration_tests/multiarch_group/: Dockerfile  buildalot.yaml  test.bash
buildalot_integration_tests/rosish/: buildalot.yaml  test.bash
buildalot_integration_tests/rosish/ros1/desktop/: Dockerfile
buildalot_integration_tests/rosish/ros1/desktop-full/: Dockerfile
buildalot_integration_tests/rosish/ros1/perception/: Dockerfile
buildalot_integration_tests/rosish/ros1/robot/: Dockerfile
buildalot_integration_tests/rosish/ros1/ros-base/: Dockerfile
buildalot_integration_tests/rosish/ros1/ros-core/: Dockerfile  ros_entrypoint.sh
buildalot_integration_tests/rosish/ros1/simulators/: Dockerfile
buildalot_integration_tests/rosish/ros1/simulators-osrf/: Dockerfile
buildalot_integration_tests/rosish/ros1/viz/: Dockerfile
buildalot_integration_tests/single_group/: Dockerfile  buildalot.yaml  test.bash
buildalot_integration_tests/single_image/: Dockerfile  buildalot.yaml  test.bash
scripts/: from_source_install_buildalot_dependencies.bash  from_source_install_integration_test_dependencies.bash
src/buildahlot/: config.py
src/buildalot/: buildah.py  cli.py  cohesive_output.py  config.py  graph.py  oci.py  work.py
